--- a/biglinux-deb-installer/DEBIAN/es.po
+++ b/biglinux-deb-installer/DEBIAN/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: biglinux-deb-installer\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-15 21:02-0300\n"
+"POT-Creation-Date: 2020-04-23 04:46-0300\n"
 "PO-Revision-Date: 2020-04-15 14:04-0300\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -67,10 +67,10 @@ msgstr ""
 msgid "Depende de "
 msgstr ""
 
-msgid "mas, não vai ser instalado."
+msgid "mas não vai ser instalado."
 msgstr ""
 
-msgid "mas, não está disponível"
+msgid "mas não está disponível"
 msgstr ""
 
 msgid "Não é possível prosseguir com a instalação.<br><br>"
